# AUTOMATIZACION-PRUEBAS

./: .gitignore  Cargo.toml  README.md  build.rs  config.example.yml  index.js  main.js  package.json  resources.rc  updater.js
.github/workflows/: build.yml
src/: config.rs  main.rs  updater.rs
