[package]
name = "mi_automatizador"
version = "0.1.7"
edition = "2024"
build = "build.rs"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
reqwest = { version = "0.12.24", features = ["json", "gzip"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "=0.9.34-deprecated"
flate2 = "1.1.5"
base64 = "0.22"
chrono = "0.4"
anyhow = "1.0"
dirs = "6.0.0"        
futures-util = "0.3.31"  


[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["consoleapi", "wincon"] }

[build-dependencies]
winres = "0.1.12"


[profile.release]
opt-level = "z"      # optimizar por tamaño
lto       = true     # Link-Time Optimization
strip     = true     # eliminar símbolos
panic     = "abort"  # menor overhead 
